# Analytics-API

./: DockerFile.web  Dockerfile.web  README.md  compose.yaml  pyproject.toml
nbs/: 1-verify-api-event-route.ipynb  2-basic-data-types copy.ipynb  3-list-data-types.ipynb  4-send-data-to-the-api.ipynb  hello-world.ipynb
src/: app.py
src/api/events/: routing.py  schemas.py
