[project]
name = "analytic-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "gunicorn>=25.1.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "timescaledb>=0.0.4",
    "uvicorn>=0.41.0",
]
